--- a/.github/workflows/dockerc.yml
+++ b/.github/workflows/dockerc.yml
@@ -42,6 +42,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: downcase REPO
+        run: |
+          REGISTRY_IMAGE=${{ env.REGISTRY_IMAGE }}
+          echo "REGISTRY_IMAGE=${REGISTRY_IMAGE,,}" >>${GITHUB_ENV}
+          IMAGE=${{ env.IMAGE }}
+          echo "IMAGE=${IMAGE,,}" >>${GITHUB_ENV}
+
 # docker
 
       - name: Set up QEMU
@@ -82,9 +89,9 @@ jobs:
         run: chmod +x ./dockerc
 
       - name: Create executable amd64
-        run: ./dockerc --image ghcr.io://${{ env.IMAGE }}:main -o worldtimezone_amd64 --arch amd64
+        run: ./dockerc --image ${{ env.REGISTRY_IMAGE }}:main -o worldtimezone_amd64 --arch amd64
       - name: Create executable arm64
-        run: ./dockerc --image ghcr.io://${{ env.IMAGE }}:main -o worldtimezone_amd64 --arch arm64
+        run: ./dockerc --image ${{ env.REGISTRY_IMAGE }}:main -o worldtimezone_amd64 --arch arm64
 
 # upload
 
