--- a/.github/workflows/dockerc.yml
+++ b/.github/workflows/dockerc.yml
@@ -89,9 +89,9 @@ jobs:
         run: chmod +x ./dockerc
 
       - name: Create executable amd64
-        run: ./dockerc --image "${{ env.REGISTRY }}://${{ env.IMAGE }}:main" -o worldtimezone_amd64 --arch amd64
+        run: ./dockerc --image "docker-daemon:${{ env.IMAGE }}:main" -o worldtimezone_amd64 --arch amd64
       - name: Create executable arm64
-        run: ./dockerc --image "${{ env.REGISTRY }}://${{ env.IMAGE }}:main" -o worldtimezone_amd64 --arch arm64
+        run: ./dockerc --image "docker-daemon:${{ env.IMAGE }}:main" -o worldtimezone_amd64 --arch arm64
 
 # upload
 
