--- a/.github/workflows/dockerc.yml
+++ b/.github/workflows/dockerc.yml
@@ -95,9 +95,12 @@ jobs:
         run: chmod +x ./dockerc
 
       - name: Create executable amd64
-        run: ./dockerc --image "docker-daemon:${{ env.REGISTRY_IMAGE }}:main" -o worldtimezone_amd64 --arch amd64
+        run: ./dockerc --image "docker-daemon:${{ env.REGISTRY_IMAGE }}:main" -o ./worldtimezone_amd64 --arch amd64
       - name: Create executable arm64
-        run: ./dockerc --image "docker-daemon:${{ env.REGISTRY_IMAGE }}:main" -o worldtimezone_amd64 --arch arm64
+        run: ./dockerc --image "docker-daemon:${{ env.REGISTRY_IMAGE }}:main" -o ./worldtimezone_arm64 --arch arm64
+
+      - name: Show files
+        run: ls -la .
 
 # upload
 
