--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "apscheduler>=3.10.4",
     "dateparser>=1.2.0",
-    "hikari-lightbulb>=2.3.5.post0",
+    "hikari-lightbulb<3.0.0",
     "hikari-miru>=4.1.1",
     "hikari[speedups]>=2.0.0",
     "peewee>=3.17.6",
