--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "hikari[speedups]>=2.0.0",
     "peewee>=3.17.6",
     "pytz>=2024.1",
-    'uvloop>=0.20.0 ; platform_system != "Windows"',
+    #'uvloop>=0.21.0 ; platform_system != "Windows"',
 ]
 
 [tool.basedpyright]
